Development
	More channel io cleanup, make sure that when one channel is closed the others are closed as well
	Allow updating of downloaded percentage while media is paused
	French translation by Starcrasher
	Implement Save As dialog when running under gecko-mediaplayer (feature not finished)
	Implement drag and drop support patch from Alexandre Damien
	Scale the button image
	Hide drawing area on media quit
	Fix problem with error reader not shutting down correctly.
	fix invalid error, when no filename is specified
	Show warning message and don't start mplayer when file is not found.
	Use of the -quiet option may cause mplayer not to be shutdown
	Add -framedrop to the list of default options for mplayer
	When you set the osdlevel, apply it immediately
	Allow setting osdlevel in Edit->Preferences
	Set osdlevel to 0 by default (plan to change this in the Preferences eventually)
	Set vol_slider so that left and right don't activate it and the media forward/rev
	If embed_window is -1 but then we get a video, show the window
	If --window=-1 then don't show the window at all, used for background media
	Fix problem with looping when window_id not specified but control_id is
	More GUI Changes to Preferences Dialog
0.4.6
	Update Spanish translation
	HIG for Edit -> Preferences
	"Highlight" buttons on mouse over
	Clean up dbus_unhook
	Implement autostart option
	Make some changes to the preferences dialog
	debian package fixes, as seen at getdeb.net
	Version bump
	Add in support for disabling the screen saver via dbus while we're running
	Try to keep pause state on video and volume changes
	Show media in title bar
	Only show song_title in window when streaming and when no video
0.4.5
	Don't allow song_title to obtain focus
	Updated ru translation
	More keyboard accelerators Up/Down + PgUp/PgDn
	Don't map window when it hasn't been shown yet in embed mode
	When embedded set initial window size without need for resize event
	Uppercase the codec names