@@ -488,6 +488,27 @@ void dbus_cancel()
 
 }
 
+void dbus_send_event(gchar *event, gint button)
+{
+    gchar *path;
+	gchar *localevent;
+    DBusMessage *message;
+
+    path = g_strdup_printf("/control/%i", control_id);
+	localevent = g_strdup_printf("%s",event);
+    message = dbus_message_new_signal(path, "com.gecko.mediaplayer", "Event");
+	if (g_ascii_strcasecmp(localevent,"MouseDown") == 0 || g_ascii_strcasecmp(localevent,"MouseUp") == 0) {
+    	dbus_message_append_args(message, DBUS_TYPE_STRING, &localevent, DBUS_TYPE_INT32, &button, DBUS_TYPE_INVALID);
+	} else {
+    	dbus_message_append_args(message, DBUS_TYPE_STRING, &localevent, DBUS_TYPE_INVALID);
+	}
+    dbus_connection_send(connection, message, NULL);
+    dbus_message_unref(message);
+    g_free(path);
+	g_free(localevent);
+
+}
+
 gboolean GetProperty(gchar * property)
 {
 
