@@ -1,4 +1,5 @@
 Development
+	Send MediaComplete event to gecko-mediaplayer 
 	More channel io cleanup, make sure that when one channel is closed the others are closed as well
 	Allow updating of downloaded percentage while media is paused
 	French translation by Starcrasher
